@@ -1,3 +1,12 @@
+2012-01-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/51796
+	* combine.c (distribute_notes): If i3 is a noreturn call,
+	allow old_size to be equal to args_size and make sure the
+	noreturn call gets REG_ARGS_SIZE note.
+	* expr.c (fixup_args_size_notes): Put REG_ARGS_SIZE notes
+	on noreturn calls even when the delta is 0.
+
 2012-01-11  Nathan Sidwell  <nathan@acm.org>
 
 	* gcov.c (STRING_SIZE): Remove.
